fixing the github-plugin again, hope this works

--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ github_username:  Hussain-Alsalman
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
-
+  - github-pages
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
