--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_username:  Hussain-Alsalman
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
   - github-pages
