--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: المنهج العربي لعلم البيانات
 email: ArabianAnalyst@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   هذه الصفحة صممت خصيصا لتطوير منهج عربي شامل لعلم البيانات.
-  إذا كنت من المهتمين بعلم البيانات وتريد التعلم والدخول في هذا المجال هذه الصفحة صممت من أجلك. 
-baseurl: "Arabic-DS-Curriculum" # the subpath of your site, e.g. /blog
+  إذا كنت من المهتمين بعلم البيانات وتريد التعلم والدخول في هذا المجال هذه الصفحة صممت من أجلك.
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ArabianAnalyst
 github_username:  Hussain-Alsalman
